--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,313 @@
     transform: rotate(360deg);
   }
 }
+:root {
+  --primary-color: #6a6b83;
+  --secondary-color: #ccd6eb;
+  --tertiary-color: #001730;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing:content-box;
+}
+
+body {
+  color: var(--tertiary-color);
+  font-family: Helvetica, Arial, Sans-serif;
+}
+
+/* Header Styling*/
+header {
+  background-color: var(--primary-color);
+  display:flex;
+  justify-content: space-between;
+  flex-wrap:wrap;
+  padding: 20px 35px;
+  z-index: 9999;
+  position: static;
+}
+
+header h1 {
+  font-weight: bold;
+  font-size: 36px;
+  padding: 10px 25px;
+  color: var(--tertiary-color);
+  background-color: var(--secondary-color);
+  margin: 0 -34px;
+}
+
+header h1 a {
+  display:flex;
+  margin: 0 -20px 0 30px;
+}
+
+header a {
+  color: var(--tertiary-color);
+  text-decoration: none;
+}
+
+header nav {
+  margin: 7px 0;
+}
+
+header nav ul {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap:wrap;
+  align-items: center;
+  list-style: none;
+}
+
+header nav ul li a {
+  padding: 10px 30px;
+  font-size: 1.2vw;
+  border-bottom: solid 5px;
+  margin: 0 10px;
+}
+
+header nav ul li a:hover {
+  background: var(--secondary-color);
+  color: var(--tertiary-color);
+  text-shadow: none;
+}
+/*End of Header*/
+
+/* Hero Section*/
+.hero {
+  background-image: url("./images/hero-img.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: 0 -650px;
+  height: 200px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  justify-content: flex-end;
+  padding: 20px 100px;
+}
+
+.hero div {
+  background-color: var(--secondary-color);
+  width: 210px;
+  text-align: center;
+}
+
+.hero-name {
+  text-align: right;
+  padding: 10px;
+}
+/* Hero End*/
+
+/* General purpose styles*/
+section {
+  padding-top: 1%;
+  padding-bottom: 1%;
+  flex-wrap:wrap;
+}
+section h3 {
+  width: 25%;
+  display:flex;
+  justify-content: flex-end;
+  text-align: right;
+  font-size: 48px;
+  color: var(--primary-color);
+  padding-right: 1%;
+}
+
+.size {
+  width: 65%;
+  flex-wrap:wrap;
+}
+
+.flex-row{
+  display:flex;
+}
+
+/* End of general*/
+
+/* About me section*/
+.about p {
+  line-height: 1.5;
+  color: var(--tertiary-color);
+  width: 100%;
+  font-size: 20px;
+  padding-left: 5%;
+  border-left: 6px solid var(--tertiary-color);
+}
+/* end of about me*/
+
+/* Work/Project section */
+
+.example {
+  border-left: 6px solid var(--tertiary-color);
+  flex-wrap: wrap;
+  padding-left: 3%;
+  justify-content: flex-start;
+}
+
+.work-image{
+  background-position: top;
+  background-size: cover;
+  width: 100%;
+  height: 250px;
+  display: block;
+  text-decoration: none;
+  cursor: pointer;
+  overflow: hidden;
+  white-space:nowrap;
+  border: 6px solid var(--primary-color);
+  transition: .2s;
+}
+
+.work-image:hover {
+  opacity: .5;
+}
+
+.work-hero {
+  width: 100%;
+  height: 500px;
+}  
+
+.img-1 {
+  background-image: url('./images/project-1.png');
+}
+.img-2 {
+  background-image: url('./images/project-2.jpg');
+}
+.img-3 {
+  background-image: url('./images/project-3.jpg');
+}
+.img-4 {
+  background-image: url('./images/project-4.png');
+}
+.img-5 {
+  background-image: url('./images/project-5.jpg');
+}
+
+.hero-box {
+  width: 100%;
+  padding-bottom: 2%;
+  padding-right: 2%;
+}
+
+.project-box {
+  width: 48%;
+  padding-right: 2%;
+  padding-bottom: 2%;
+}
+.project-title {
+  align-items: flex-start;
+  background-color: var(--primary-color);
+  text-align: left;
+  padding: 10px;
+  color: var(--secondary-color);
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  margin-top: 180px;
+}
+
+.hero-title {
+  margin-top: 430px;
+}
+
+article {
+  display: flex;
+}
+
+/* end of work*/
+
+/* contact section/footer */
+
+.info nav {
+  border-left: 6px solid var(--tertiary-color);
+  justify-content: space-evenly;
+}
+
+.info nav ul {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap:wrap;
+  align-items: center;
+  list-style: none;
+  width: 100%;
+  padding-left: 3%;
+}
+
+.info nav ul li a {
+  padding: 10px 30px;
+  font-size: 1.0vw;
+  border-bottom: solid 5px;
+  margin: 0 10px;
+  text-decoration: none;
+  color: var(--tertiary-color)
+}
+/* end of contact*/
+
+/* MEDIA QUERY for smaller desktop screens*/
+@media screen and (max-width: 980px){
+  header {
+      justify-content: flex-start;
+      position: relative;
+  }
+
+  header h1 {
+      text-align: center;
+  }
+
+  header nav {
+      width: 100%;
+  }
+
+  header nav ul {
+      margin-top: 20px;
+      width: 100%;
+      justify-content: center;
+  }
+
+  header nav ul li a {
+      font-size: 20px;
+  }
+
+  .info nav ul {
+      width: 100%;
+      justify-content: center;
+  }
+
+  .info nav ul li a {
+      font-size: 15px;
+  }
+
+}
+
+/* MEDIA QUERY for Tablets and smaller*/
+@media screen and (max-width: 768px) {
+  header nav ul li {
+      padding: 10px;
+  }
+
+  section h3 {
+      font-size: 25px;
+  }
+
+  .info nav ul li {
+      padding: 10px;
+  }
+
+  .about p {
+      font-size: 12px;
+  }
+}
+
+/* MEDIA QUERY for mobile phones and smaller*/
+@media screen and (max-width: 575px) {
+  .project-title {
+      font-size: 2vw;
+  }
+
+  .info nav ul {
+      justify-content: flex-start;
+  }
+}
